# pagina

./: Cargo.toml  README.md  codopsy-report.json
crates/pagina-app/: Cargo.toml
crates/pagina-app/src/: main.rs
crates/pagina-cli/: Cargo.toml
crates/pagina-cli/src/: main.rs
crates/pagina-compose/src/: main.rs
crates/pagina-core/: Cargo.toml
crates/pagina-core/src/: dom.rs  font.rs  js.rs  layout.rs  lib.rs  mathml.rs  pdf.rs  pdfa.rs  pdfua.rs  style.rs  svg.rs
crates/pagina-core/src/css/: mod.rs  parser.rs  values.rs
crates/pagina-core/src/layout/: blocks.rs  line_break.rs
crates/pagina-core/src/style/: declarations.rs  ua.rs
docs/roadmap/: README.md
docs/roadmap/done/: descendant-selectors.md  pdf-bookmarks.md  pdf-links.md
examples/: gyomu-itaku.toml  outsourcing-contract.toml
templates/contract/: fonts.toml
templates/contract/clauses/: anti-social.html  consultation.html  expenses.html  no-subcontract.html  reporting.html  work-method.html  work-style.html
templates/contract/presets/: gyomu-itaku.toml
tests/fixtures/: basic.html  full-test.html  js-test.html
