[package]
name = "pagina-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
html5ever.workspace = true
markup5ever.workspace = true
markup5ever_rcdom.workspace = true
cssparser.workspace = true
printpdf.workspace = true
lopdf.workspace = true
ttf-parser.workspace = true
image.workspace = true
resvg.workspace = true
boa_engine.workspace = true
boa_gc.workspace = true
